--- a/html_pc/hhhhhtml.html
+++ b/html_pc/hhhhhtml.html
@@ -7,7 +7,7 @@
 <body>
 
 
-<form action="" method="post">
+<form action="" method="get">
     <p>性别:</p>
     <a href="zxc"></a>
     <input name="gender" type="radio" value="男">男
@@ -23,7 +23,8 @@
     <input type="reset" value="重置">
 </form>
 <script type="text/javascript">
-    alert("july")
+    alert("july");
+    document.
 
 </script>
 </body>
